--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,13 @@
-install:
-	sudo install -m 0644 rotor/config/rotor.conf /etc
-	sudo install -m 0644 libnss_rotd/libnss_rotd.so.2 /lib
+# Install rotd/rotor
+.PHONY: extract install uninstall
+
+
+install: extract
+	sudo install -m 0644 _libnss/libnss_rotd.so.2 /lib
 	sudo /sbin/ldconfig -n /lib /usr/lib
+
+extract:
+	mkdir /opt/rotor && sudo tar -xvf _rotor/rotor-0.1.0.tar.gz -C /opt/rotor
 
 uninstall:
 	sudo rm /lib/libnss_rotd.so.2
