Fix permission on the extracted archive, update the uninstall target.

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,8 +7,9 @@ install: extract
 	sudo /sbin/ldconfig -n /lib /usr/lib
 
 extract:
-	mkdir /opt/rotor && sudo tar -xvf _rotor/rotor-0.1.0.tar.gz -C /opt/rotor
+	sudo mkdir /opt/rotor && sudo tar --no-same-owner -xvf _rotor/rotor-0.1.0.tar.gz -C /opt/rotor
 
 uninstall:
+	sudo rm -rf /opt/rotor
 	sudo rm /lib/libnss_rotd.so.2
 	sudo /sbin/ldconfig -n /lib /usr/lib
