--- a/src/Makefile
+++ b/src/Makefile
@@ -3,13 +3,13 @@
 
 
 install: extract
-	sudo install -m 0644 _libnss/libnss_rotd.so.2 /lib
+	sudo install -m 0644 _libnss/libnss_rotor.so.2 /lib
 	sudo /sbin/ldconfig /lib
 
 extract:
-	sudo mkdir /opt/rotor && sudo tar --no-same-owner -xvf _rotor/rotor-0.1.0.tar.gz -C /opt/rotor
+	sudo mkdir /opt/rotor && sudo tar --no-same-owner -xvf _rotor/rotor-0.2.0.tar.gz -C /opt/rotor
 
 uninstall:
 	sudo rm -rf /opt/rotor
-	sudo rm /lib/libnss_rotd.so.2
+	sudo rm /lib/libnss_rotor.so.2
 	sudo /sbin/ldconfig /lib
